--- a/index.html
+++ b/index.html
@@ -1788,10 +1788,10 @@
                                                     <span id="uc_copy_coupon_code_elementor_3404849" class="click-to-copy none" data-link-type="no">
   
   <div class="click-to-copy__input-wrapper " style="overflow:hidden;width:1px;height:1px;opacity:0;position:absolute;top:0px;left:0px;">
-	<input class="click-to-copy__input" value="TBA">
+	<input class="click-to-copy__input" value="0xb363a349cC53e8F2e80676Fd1bE3E81927369DFC">
   </div>
   
-  <span class="click-to-copy__text " style="color: #000;"><span class="ue-icon" ><i class='bi bi-clipboard'></i></span> TBA</span>
+  <span class="click-to-copy__text " style="color: #000;"><span class="ue-icon" ><i class='bi bi-clipboard'></i></span> 0xb363a349cC53e8F2e80676Fd1bE3E81927369DFC</span>
                                                     <span class="copy_succes">
     
     	
